--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,14 @@
 {
     // "extends": "airbnb-base",
     // "plugins": ["prettier", "jest"],
-    "plugins": ["prettier"],
-    "extends": ["airbnb-base", "eslint:recommended", "plugin:prettier/recommended", "prettier"],
+    // "plugins": ["prettier"],
+    // "extends": ["airbnb-base", "eslint:recommended", "plugin:prettier/recommended", "prettier"],
+    "extends": ["airbnb-base", "eslint:recommended", "plugin:import/recommended"],
+    // "plugins": ["jest"],
     "env": {
       "es6": true,
       "browser": true,
-      "node": true,
+      "node": true
       // "jest/globals": true
     },
     "globals": {
@@ -19,7 +21,7 @@
       "ecmaVersion": 8
     },
     "rules": {
-      "no-unused-vars": "warn",
+      "no-unused-vars": "warn"
       // "prettier/prettier": ["error", { "singleQuote": true }]
     }
     // "overrides": [
