--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^4.2.1",
     "filemanager-webpack-plugin": "^8.0.0",
     "forever": "^4.0.3",
