--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     // "plugins": ["prettier"],
     // "extends": ["airbnb-base", "eslint:recommended", "plugin:prettier/recommended", "prettier"],
     "extends": ["airbnb-base", "eslint:recommended", "plugin:import/recommended"],
-    // "plugins": ["jest"],
+    "plugins": ["jest"],
     "env": {
       "es6": true,
       "browser": true,
@@ -21,7 +21,13 @@
       "ecmaVersion": 8
     },
     "rules": {
-      "no-unused-vars": "warn"
+      "no-unused-vars": "warn",
+
+      "jest/no-disabled-tests": "warn",
+      "jest/no-focused-tests": "error",
+      "jest/no-identical-title": "error",
+      "jest/prefer-to-have-length": "warn",
+      "jest/valid-expect": "error"
       // "prettier/prettier": ["error", { "singleQuote": true }]
     }
     // "overrides": [
