--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,15 @@
       "jest/prefer-to-have-length": "warn",
       "jest/valid-expect": "error"
       // "prettier/prettier": ["error", { "singleQuote": true }]
-    }
+    },
+    "overrides": [
+      {
+        "files": ["**/*.test.js"],
+        "plugins": ["jest"],
+        "extends": ["plugin:jest/recommended"],
+        "rules": { "jest/prefer-expect-assertions": "off" }
+      }
+    ]
     // "overrides": [
     //   {
     //     "files": ["**/*.test.js"],
